Adjusting the selector according to BEM standards

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,4 +1,4 @@
-<header class="cz-header cz-header__no-carousel">
+<header class="cz-header cz-header--no-carousel">
     <canvas class="cz-triangles cz-header__background" id="cz-triangles-header" width="0" height="0"></canvas>
     {{> menu }}
     <ul class="cz-carousel cz-list-reset">
