--- a/src/scss/components/carousel.scss
+++ b/src/scss/components/carousel.scss
@@ -169,7 +169,7 @@ $cz-carousel-transition-delay: 700ms;
     }
 }
 
-.cz-header__no-carousel {
+.cz-header--no-carousel {
     height: 55vh;
 
     .cz-carousel__image,
