--- a/src/scss/components/logo.scss
+++ b/src/scss/components/logo.scss
@@ -1,12 +1,25 @@
 .cz-logo {
     position: absolute;
     display: flex;
-    width: 100%;
+    left: 0px;
+    right: 0px;
     top: 50px;
     justify-content: center;
     z-index: 2;
+
+    @media screen and (max-width: $cz-breakpoint-desktop) {
+        top: 25px;
+        left: 30px;
+        display: block;
+    }
 }
 
 .cz-logo__image {
     width: 260px;
+    height: 52px;
+
+    @media screen and (max-width: $cz-breakpoint-desktop) {
+        width: 220px;
+        height: 44px;
+    }
 }
