--- a/src/partials/carousel.html
+++ b/src/partials/carousel.html
@@ -1,5 +1,5 @@
 <header class="cz-header">
-    <canvas class="cz-triangles cz-header__background" id="cz-triangles-header" width="0" height="0"></canvas>
+    <div class="cz-triangles-static cz-header__background"></div>
     <ul cz-carousel class="cz-carousel cz-list-reset">
         <li>
             <div class="cz-carousel__image cz-image-focus-right" style="background-image:url('http://lorempixel.com/1200/1920/technics/')"></div> 
