Fixed header title divider

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -5,7 +5,7 @@
             <div class="cz-carousel__image cz-image-focus-right" style="background-image:url('{{header.image}}')"></div>
             <div class="cz-carousel__content">
                 <h1 class="cz-carousel__title">{{ header.title }}</h1>
-                <div class="cz-divider"></div>
+                <hr class="cz-divider--center-desktop" />
                 <p class="cz-carousel__slogan">
                     {{{ header.slogan }}}
                 </p>
