Added CODEZILLA to the page title

--- a/src/layouts/layout.html
+++ b/src/layouts/layout.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{{ title }}</title>
+    <title>{{ title }} &middot; CODEZILLA</title>
     <!-- Allows control over where resources are loaded from -->
     <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self' ws://localhost:* 'sha256-i7PshISEwg2EgnmQ50VZDYsuW/NpRTiflxGsrxist8k='"> -->
     <!-- Short description of the page (limit to 150 characters) -->
