tweaken met martin

--- a/src/main.scss
+++ b/src/main.scss
@@ -34,6 +34,7 @@
 @import 'scss/components/text';
 @import 'scss/components/media-block';
 @import 'scss/components/triangles';
+@import 'scss/components/main-body';
 
 /* Utilities */
 @import 'scss/utilities/utilities';
