--- a/src/partials/media.html
+++ b/src/partials/media.html
@@ -1,5 +1,5 @@
 <div class="media-block">
-    <h2>{{ title }}</h2>
+    <h2 class="cz-no-m-b">{{ title }}</h2>
     <div class="cz-divider"></div>
     {{> @partial-block }}
 </div>
