--- a/src/scss/utilities/utilities.scss
+++ b/src/scss/utilities/utilities.scss
@@ -15,7 +15,7 @@
 }
 
 .cz-image-focus-left {
-    background-position-x: 0%;
+    background-position-x: 0;
 }
 
 .cz-image-focus-right {
@@ -23,7 +23,7 @@
 }
 
 .cz-image-focus-top {
-    background-position-y: 0%;
+    background-position-y: 0;
 }
 
 .cz-image-focus-bottom {
@@ -32,4 +32,24 @@
 
 .cz-no-display {
     display: none;
+}
+
+//No margin bottom
+.cz-no-m-b {
+    margin-bottom: 0;
+}
+
+//No margin top
+.cz-no-m-t {
+    margin-top: 0;
+}
+
+//No padding bottom
+.cz-no-p-b {
+    padding-bottom: 0;
+}
+
+//No padding top
+.cz-no-p-t {
+    padding-top: 0;
 }
