--- a/src/main.scss
+++ b/src/main.scss
@@ -27,6 +27,7 @@
 @import 'scss/components/footer';
 @import 'scss/components/container';
 @import 'scss/components/carousel';
+@import 'scss/components/logo';
 @import 'scss/components/menu';
 @import 'scss/components/text';
 @import 'scss/components/media-block';
@@ -34,6 +35,8 @@
 @import 'scss/components/team-carousel';
 @import 'scss/components/monster-img';
 @import 'scss/components/body';
+@import 'scss/components/triangles';
+@import 'scss/components/body-container.scss';
 
 @import 'scss/components/diamond-grid';
 @import 'scss/components/split-panel';
