--- a/src/scss/elements/page.scss
+++ b/src/scss/elements/page.scss
@@ -1,11 +1,24 @@
 @import 'scss/tools/mixins';
 
+html, body {
+    height: 100%;
+}
+
 body {
     font-family: 'Helvetica Neue', Arial, Sans-serif;
     -webkit-font-smoothing: antialiased;
 
     @include cz-font-family('Light', 'Radikal');
     @include cz-font-base;
+
+    background-color: #242f34;
+
+    // Perspective for the body container
+    perspective: 600px;
+
+    @media screen and (max-width: $cz-breakpoint-tablet) {
+        overflow-x: hidden;
+    }
 }
 
 p {
