--- a/src/layouts/layout.html
+++ b/src/layouts/layout.html
@@ -28,7 +28,7 @@
 
     <div id="body-container" class="cz-body-container">
         <div id="body-container-overlay" class="cz-body-container__loader-overlay"></div>
-        {{> header }}
+        {{> header header = header }}
 
         {{{ contents }}}
 
