--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,8 +1,8 @@
 <header class="cz-header cz-header--no-carousel">
-    <canvas class="cz-triangles cz-header__background" id="cz-triangles-header" width="0" height="0"></canvas>
+    <div class="cz-triangles-static cz-header__background" id="cz-triangles-header"></div>
     <ul class="cz-carousel cz-list-reset">
         <li>
-            <div class="cz-carousel__image cz-image-focus-right" style="background-image:url('{{header.image}}')"></div>
+            <div class="cz-carousel__image cz-image-focus-right" style="background-image: url('{{ header.image }}')"></div>
             <div class="cz-carousel__content">
                 <h1 class="cz-carousel__title">{{ header.title }}</h1>
                 <div class="cz-divider"></div>
