--- a/src/scss/components/carousel.scss
+++ b/src/scss/components/carousel.scss
@@ -4,16 +4,8 @@ $cz-carousel-transition-delay: 700ms;
 .cz-header {
     height: 100vh;
     width: 100vw;
-    background-color: $cz-background;
     color: $cz-text-inverse;
     position: relative;
-    display: block;
-
-    &:before, &:after{
-        content:" ";
-        clear: both;
-        display: table;
-    }
 
     @media screen and (max-width: $cz-breakpoint-desktop) {
         padding: $cz-inner-spacing;
@@ -26,6 +18,7 @@ $cz-carousel-transition-delay: 700ms;
     top: 0;
     z-index: -1;
 }
+
 
 .cz-carousel {
     > li {
@@ -131,8 +124,8 @@ $cz-carousel-transition-delay: 700ms;
     opacity: 0;
 
     @media screen and (min-width: $cz-breakpoint-desktop) {
-            text-align: right;
-            max-width: calc(50% - #{$cz-inner-spacing});
+        text-align: right;
+        max-width: calc(50% - #{$cz-inner-spacing});
     }
 }
 
@@ -174,5 +167,32 @@ $cz-carousel-transition-delay: 700ms;
             transform: translateX(0);
             opacity: 1;
         }
+    }
+}
+
+.cz-header--no-carousel {
+    height: 55vh;
+
+    .cz-carousel__image,
+    .cz-carousel__title,
+    .cz-carousel__slogan {
+        opacity: 1;
+    }
+
+    .cz-carousel__image,
+    .cz-carousel__slogan {
+        transform: translateX(0);
+    }
+
+    .cz-carousel__slogan {
+        @media screen and (min-width: $cz-breakpoint-desktop) {
+            text-align: center;
+            max-width: none;
+        }
+    }
+
+    .cz-divider {
+        position: relative;
+        height: 5px;
     }
 }
