--- a/src/scss/components/footer.scss
+++ b/src/scss/components/footer.scss
@@ -1,13 +1,10 @@
 @import "../settings/variables";
 
+.cz-footer {
+    position: relative;
+}
 .cz-footer__blocks {
     display: flex;
-    flex-direction: column;
-    background-color: $cz-fill-grey-dark;
-
-    @media screen and (min-width: $cz-max-width-desktop) {
-        flex-direction: row;
-    }
 }
 
 .cz-footer__block {
@@ -16,10 +13,6 @@
     pointer-events: none; // Pass click through to triangles
 
     @media screen and (min-width: $cz-breakpoint-desktop) {
-        &:nth-of-type(1) {
-            background-color: rgba(26, 33, 26, .5);
-        }
-
         &:nth-of-type(2) {
             background-color: rgba(0, 0, 0, .25);
         }
@@ -27,6 +20,15 @@
 
     @media screen and (min-width: $cz-max-width-desktop) {
         width: 50%;
+    }
+}
+
+.cz-footer__blocks-inner {
+    display: flex;
+    flex-direction: column;
+
+    @media screen and (min-width: $cz-breakpoint-desktop) {
+        flex-direction: row;
     }
 }
 
@@ -56,6 +58,8 @@
     padding: 0 20px;
 
     background-color: $cz-color-primary;
+
+    position: relative;
 
     @media screen and (min-width: $cz-breakpoint-desktop) {
         height: 165px;
