--- a/src/scss/components/carousel.scss
+++ b/src/scss/components/carousel.scss
@@ -70,7 +70,7 @@ $cz-carousel-transition-delay: 700ms;
     text-align: center;
     font-size: 45px;
     text-transform: uppercase;
-    color: $cz-text-inverse;
+    color: white;
     padding-bottom: $cz-inner-spacing * 2;
     transition:
         font 150ms ease-out,
