--- a/src/partials/menu.html
+++ b/src/partials/menu.html
@@ -14,7 +14,8 @@
 
     <ul class="cz-menu__list">
         <li class="cz-navigation__list-item"><a href="/" class="cz-navigation__list-link cz-text-inverse">Home</a></li>
-        <li class="cz-navigation__list-item"><a href="/team/" class="cz-navigation__list-link cz-text-inverse">Over ons</a></li>
-        <li class="cz-navigation__list-item"><a href="/projecten/" class="cz-navigation__list-link cz-text-inverse">Werken bij</a></li>
+        <li class="cz-navigation__list-item"><a href="/team/" class="cz-navigation__list-link cz-text-inverse">Team</a></li>
+        <li class="cz-navigation__list-item"><a href="/werken-bij/" class="cz-navigation__list-link cz-text-inverse">Werken bij</a></li>
+        <li class="cz-navigation__list-item"><a href="/visie/" class="cz-navigation__list-link cz-text-inverse">Visie</a></li>
     </ul>
 </nav>
