--- a/src/main.scss
+++ b/src/main.scss
@@ -37,6 +37,7 @@
 @import 'scss/components/body';
 @import 'scss/components/triangles';
 @import 'scss/components/body-container.scss';
+@import 'scss/components/header-static';
 
 @import 'scss/components/diamond-grid';
 @import 'scss/components/split-panel';
