--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,15 +1,15 @@
-<header class="cz-header cz-header--no-carousel">
-    <div class="cz-triangles-static cz-header__background" id="cz-triangles-header"></div>
-    <ul class="cz-carousel cz-list-reset">
-        <li>
-            <div class="cz-carousel__image cz-image-focus-right" style="background-image: url('{{ header.image }}')"></div>
-            <div class="cz-carousel__content">
-                <h1 class="cz-carousel__title">{{ header.title }}</h1>
-                <div class="cz-divider"></div>
-                <p class="cz-carousel__slogan">
-                    {{{ header.slogan }}}
+<header class="cz-header-static">
+    <div class="cz-triangles-static cz-header-static__background" id="cz-triangles-header"></div>
+    <div class="cz-header-static__image cz-image-focus-right" style="background-image: url('{{ header.image }}')"></div>
+    <div class="cz-header-static__inner cz-list-reset">
+        <div class="cz-header-static__content">
+            <h1 class="cz-header-static__title">{{ header.title }}</h1>
+            <div class="cz-divider cz-header-static__divider"></div>
+            <div class="cz-header-static__slogan">
+                <p class="cz-header-static__slogan-inner">
+                {{{ header.slogan }}}
                 </p>
             </div>
-        </li>
-    </ul>
+        </div>
+    </div>
 </header>
