team, visie pages and new menu order (with corresponding footer links)

--- a/src/main.scss
+++ b/src/main.scss
@@ -38,7 +38,7 @@
 @import 'scss/components/triangles';
 @import 'scss/components/body-container.scss';
 @import 'scss/components/header-static';
-
+@import 'scss/components/diamond';
 @import 'scss/components/diamond-grid';
 @import 'scss/components/split-panel';
 
