--- a/src/scss/elements/page.scss
+++ b/src/scss/elements/page.scss
@@ -13,11 +13,13 @@ body {
 
     background-color: #242f34;
 
-    // Perspective for the body container
-    perspective: 600px;
-
     @media screen and (max-width: $cz-breakpoint-tablet) {
         overflow-x: hidden;
+    }
+
+    &.cz-body-perspective {
+        // Perspective for the body container
+        perspective: 600px;
     }
 }
 
