--- a/src/partials/carousel.html
+++ b/src/partials/carousel.html
@@ -6,9 +6,9 @@
             <div class="cz-carousel__content">
                 <h1 class="cz-carousel__title">Front end coding</h1>
                 <p class="cz-carousel__slogan">
-                    [ 'Interactieve', <br />
-                    'Gebruiksvriendelijke', <br />
-                    'Webapplicaties' ]
+                    Interactieve <br />
+                    Gebruiksvriendelijke <br />
+                    Webapplicaties
                 </p>
             </div>
         </li>
@@ -17,7 +17,7 @@
             <div class="cz-carousel__content">
                 <h1 class="cz-carousel__title">A bad website is like a flat tire</h1>
                 <p class="cz-carousel__slogan">
-                    You can't go anywhere until you change it
+                    You can't go anywhere <br/> until you change it
                 </p>
             </div>
         </li>
@@ -26,7 +26,7 @@
             <div class="cz-carousel__content">
                 <h1 class="cz-carousel__title">We make the web great again</h1>
                 <p class="cz-carousel__slogan">
-                    Websites should look good from the inside and out
+                    Websites should look good <br/>  from the inside and out
                 </p>
             </div>
         </li>
