Added all team members

--- a/src/partials/team-member.html
+++ b/src/partials/team-member.html
@@ -3,5 +3,5 @@
     <div class="monster-img monster-img--has-shadow">
         <img class="monster-img__img" src="{{ svg }}" width="200px" height="200px" />
     </div>
-    <div class="cz-diamond__title">{{ name }}</div>
+    <div class="cz-diamond__title">{{ displayName }}</div>
 </div>
