Svg & tortured borders

--- a/src/main.scss
+++ b/src/main.scss
@@ -41,6 +41,7 @@
 @import 'scss/components/diamond';
 @import 'scss/components/diamond-grid';
 @import 'scss/components/split-panel';
+@import 'scss/components/tortured-border';
 
 /* Utilities */
 @import 'scss/utilities/utilities';
