--- a/src/scss/components/tortured-border.scss
+++ b/src/scss/components/tortured-border.scss
@@ -7,6 +7,7 @@
     width: 100%;
     height: 100px;
     background-repeat: no-repeat;
+    background-position-x: 50%;
 }
 
 .tortured-border-top{
