feat: bedrijven-carousel

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,7 +1,7 @@
 <header class="cz-header cz-header--no-carousel">
     <div class="cz-triangles-static cz-header__background" id="cz-triangles-header"></div>
     <ul class="cz-carousel cz-list-reset">
-        <li>
+        <li class="cz-carousel--item">
             <div class="cz-carousel__image cz-image-focus-right" style="background-image: url('{{ header.image }}')"></div>
             <div class="cz-carousel__content">
                 <h1 class="cz-carousel__title">{{ header.title }}</h1>
