--- a/src/main.scss
+++ b/src/main.scss
@@ -27,6 +27,7 @@
 @import 'scss/components/footer';
 @import 'scss/components/container';
 @import 'scss/components/carousel';
+@import 'scss/components/bedrijven-carousel';
 @import 'scss/components/logo';
 @import 'scss/components/menu';
 @import 'scss/components/text';
