--- a/src/partials/carousel.html
+++ b/src/partials/carousel.html
@@ -1,7 +1,7 @@
 <header class="cz-header">
     <div class="cz-triangles-static cz-header__background"></div>
     <ul cz-carousel class="cz-carousel cz-list-reset">
-        <li>
+        <li class="cz-carousel--item">
             <div class="cz-carousel__image cz-image-focus-right" style="background-image:url('http://lorempixel.com/1200/1920/technics/')"></div>
             <div class="cz-carousel__content">
                 <h1 class="cz-carousel__title">Front end coding</h1>
@@ -12,7 +12,7 @@
                 </p>
             </div>
         </li>
-        <li>
+        <li class="cz-carousel--item">
             <div class="cz-carousel__image cz-image-focus-right" style="background-image:url('http://lorempixel.com/1200/1920/technics/2')"></div>
             <div class="cz-carousel__content">
                 <h1 class="cz-carousel__title">Hacking is wrong</h1>
@@ -23,7 +23,7 @@
                 </p>
             </div>
         </li>
-        <li>
+        <li class="cz-carousel--item">
             <div class="cz-carousel__image cz-image-focus-right" style="background-image:url('http://lorempixel.com/1200/1920/technics/3')"></div>
             <div class="cz-carousel__content">
                 <h1 class="cz-carousel__title">It's never our fault if it's crooked</h1>
@@ -34,7 +34,7 @@
                 </p>
             </div>
         </li>
-        <li>
+        <li class="cz-carousel--item">
             <div class="cz-carousel__image cz-image-focus-right" style="background-image:url('http://lorempixel.com/1200/1920/technics/4')"></div>
             <div class="cz-carousel__content">
                 <h1 class="cz-carousel__title">The media is fake!</h1>
