--- a/src/partials/carousel.html
+++ b/src/partials/carousel.html
@@ -2,7 +2,7 @@
     <div class="cz-triangles-static cz-header__background"></div>
     <ul cz-carousel class="cz-carousel cz-list-reset">
         <li>
-            <div class="cz-carousel__image cz-image-focus-right" style="background-image:url('http://lorempixel.com/1200/1920/technics/')"></div>
+            <div class="cz-carousel__image cz-image-focus-right" style="background-image:url('/images/header-image-home-1.jpg')"></div>
             <div class="cz-carousel__content">
                 <h1 class="cz-carousel__title">Front end coding</h1>
                 <p class="cz-carousel__slogan">
@@ -13,7 +13,7 @@
             </div>
         </li>
         <li>
-            <div class="cz-carousel__image cz-image-focus-right" style="background-image:url('http://lorempixel.com/1200/1920/technics/2')"></div>
+            <div class="cz-carousel__image cz-image-focus-right" style="background-image:url('/images/header-image-home-2.jpg')"></div>
             <div class="cz-carousel__content">
                 <h1 class="cz-carousel__title">A bad website is like a flat tire</h1>
                 <p class="cz-carousel__slogan">
@@ -22,7 +22,7 @@
             </div>
         </li>
         <li>
-            <div class="cz-carousel__image cz-image-focus-right" style="background-image:url('http://lorempixel.com/1200/1920/technics/3')"></div>
+            <div class="cz-carousel__image cz-image-focus-right" style="background-image:url('/images/header-image-home-3.jpg')"></div>
             <div class="cz-carousel__content">
                 <h1 class="cz-carousel__title">We make the web great again</h1>
                 <p class="cz-carousel__slogan">
@@ -31,7 +31,7 @@
             </div>
         </li>
         <li>
-            <div class="cz-carousel__image cz-image-focus-right" style="background-image:url('http://lorempixel.com/1200/1920/technics/4')"></div>
+            <div class="cz-carousel__image cz-image-focus-right"  style="background-image:url('/images/header-image-home-4.jpg')"></div>
             <div class="cz-carousel__content">
                 <h1 class="cz-carousel__title">Data is real, news is fake</h1>
                 <p class="cz-carousel__slogan">
