--- a/src/scss/components/tortured-border.scss
+++ b/src/scss/components/tortured-border.scss
@@ -6,7 +6,7 @@
     z-index: 1;
     width: 100%;
     height: 100px;
-    background-repeat: no-repeat;
+    background-repeat: repeat-x;
     background-position-x: 50%;
 }
 
