--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,12 +1,12 @@
 <footer class="cz-footer">
     <div class="cz-triangles-static cz-header__background"></div>
-
+    <div class="cz-footer__2nd-half-darken"></div>
     <div class="cz-footer__blocks">
         <div class="container">
             <div class="cz-footer__blocks-inner">
             <section class="cz-footer__block">
                 <div class="cz-footer__block-container">
-                    <h2 class="cz-heading-2 heading-inverse">Koffie of lunch?</h2>
+                    <h2 class="cz-heading-2 heading-inverse cz-no-m-b">Koffie of lunch?</h2>
                     <div class="cz-divider"></div>
                     <p class="cz-text-inverse">Klinkt wat we doen en hoe we werken aantrekkelijk en interessant? Voor een kop koffie of lunch maken we altijd tijd.</p>
 
@@ -20,7 +20,7 @@
 
             <section class="cz-footer__block">
                 <div class="cz-footer__block-container">
-                    <h2 class="cz-heading-2 heading-inverse">CODEZILLA B.V.</h2>
+                    <h2 class="cz-heading-2 heading-inverse cz-no-m-b">CODEZILLA B.V.</h2>
                     <div class="cz-divider"></div>
                     <address>
                         <p class="cz-text-inverse">
