Text changes Martin

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -13,7 +13,7 @@
                     <h3 class="cz-heading-3 heading-inverse">Bel of mail ons</h3>
                     <p class="cz-text-inverse">
                         <a href="tel:+31 (0) 20 3120 458">020 - 3120 458</a> of 
-                        <a href="mailto:info@codezilla.nl">info@codezilla.nl</a>
+                        <a href="mailto:martin@codezilla.nl">martin@codezilla.nl</a>
                     </p>
                 </div>
             </section>
@@ -32,7 +32,7 @@
                     <p class="cz-text-inverse">
                         Tel: <a href="tel:+31 (0) 20 3120 458">020 - 3120 458</a>
                         <br />
-                        Email: <a href="mailto:info@codezilla.nl">info@codezilla.nl</a>
+                        Email: <a href="mailto:martin@codezilla.nl">martin@codezilla.nl</a>
                     </p>
                 </div>
             </section>
