--- a/src/partials/carousel.html
+++ b/src/partials/carousel.html
@@ -6,9 +6,9 @@
             <div class="cz-carousel__content">
                 <h1 class="cz-carousel__title">Front end coding</h1>
                 <p class="cz-carousel__slogan">
-                    Interactieve <br />
-                    Gebruiksvriendelijke <br />
-                    Webapplicaties
+                    interactieve <br />
+                    gebruiksvriendelijke <br />
+                    webapplicaties
                 </p>
             </div>
         </li>
