Bug cz diamond title safari

--- a/src/scss/components/diamond.scss
+++ b/src/scss/components/diamond.scss
@@ -32,6 +32,11 @@ $diamond-dimensions: 100px;
     font-size: 24px;
     font-weight: bold;
     text-transform: uppercase;
+    width: 150px;
+    display: block;
+    text-align:center;
+    left:50%;
+    margin-left:-75px;
 }
 
 .cz-diamond__svg {
