Added sitemap and canonical urls

--- a/src/layouts/home.html
+++ b/src/layouts/home.html
@@ -17,6 +17,8 @@
     <meta name="url" content="https://www.codezilla.nl/">
     <!-- Allows control over how referrer information is passed -->
     <meta name="referrer" content="no-referrer">
+    <!-- Canonical link -->
+    <link rel="canonical" href="{{ canonical }}" />
     <!-- Links -->
     <link rel="stylesheet" href="/main.css">
 </head>
