--- a/src/layouts/layout.html
+++ b/src/layouts/layout.html
@@ -21,6 +21,16 @@
     <link rel="canonical" href="{{ canonical }}" />
     <!-- Links -->
     <link rel="stylesheet" href="/main.css">
+    <!-- Favicons -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=BGBPjAyxEE">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=BGBPjAyxEE">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v=BGBPjAyxEE">
+    <link rel="manifest" href="/manifest.json?v=BGBPjAyxEE">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg?v=BGBPjAyxEE" color="#52d70b">
+    <link rel="shortcut icon" href="/favicon.ico?v=BGBPjAyxEE">
+    <meta name="msapplication-TileColor" content="#52d70b">
+    <meta name="msapplication-TileImage" content="/mstile-144x144.png?v=BGBPjAyxEE">
+    <meta name="theme-color" content="#ffffff">
 </head>
 <body>
     {{> menu }}
