--- a/src/scss/components/tortured-border.scss
+++ b/src/scss/components/tortured-border.scss
@@ -17,10 +17,10 @@
 
 .tortured-border--top{
     margin-top: -22px;
-    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="1282" height="36"><path fill="#FFF" fill-rule="evenodd" d="M0 7.643h391.738L478.37 0l60.368 11.643 106.3-4 131.282-5 221.098 5H1282v28H0"></path></svg>');
+    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="1282" height="36"><path fill="%23FFF" fill-rule="evenodd" d="M0 7.643h391.738L478.37 0l60.368 11.643 106.3-4 131.282-5 221.098 5H1282v28H0"></path></svg>');
 }
 
 .tortured-border--bottom {
     margin-top: -2px;
-    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="1282" height="33"><path fill="#FFF" fill-rule="evenodd" d="M0 28h391.738l86.633 1.643L538.74 24l106.3 4 131.282 5 221.098-5H1282V0H0"></path></svg>');
+    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="1282" height="33"><path fill="%23FFF" fill-rule="evenodd" d="M0 28h391.738l86.633 1.643L538.74 24l106.3 4 131.282 5 221.098-5H1282V0H0"></path></svg>');
 }
