Added image alts

--- a/src/layouts/home.html
+++ b/src/layouts/home.html
@@ -35,7 +35,7 @@
 <body>
     {{> menu }}
     <div class="cz-logo">
-        <a href="/"><img class="cz-logo__image" src="/images/logo-light.svg" /></a>
+        <a href="/"><img class="cz-logo__image" src="/images/logo-light.svg" alt="CODEZILLA" /></a>
     </div>
     <div id="body-container" class="cz-body-container">
         <div id="body-container-overlay" class="cz-body-container__loader-overlay"></div>
