--- a/src/partials/diamond-icon.html
+++ b/src/partials/diamond-icon.html
@@ -1,6 +1,6 @@
 <div cz-diamond="" class="cz-diamond cz-diamond--icon" cz-team-member="{{ name }}">
     <div class="cz-diamond__shape"></div>
     <div class="cz-diamond__icon cz-diamond__icon">
-        <img class="cz-diamond__svg" src="{{ svg }}" width="200px" height="200px" style="{{ inlineStyle }}" />
+        <img class="cz-diamond__svg" src="{{ svg }}" alt="{{ name }}" width="200px" height="200px" style="{{ inlineStyle }}" />
     </div>
 </div>
