--- a/src/partials/team-member-overlay.html
+++ b/src/partials/team-member-overlay.html
@@ -27,7 +27,7 @@
                     <div class="cz-team-carousel__content">
                         <div class="cz-team-carousel__img-wrapper">
                             <div class="monster-img monster-img--has-shadow monster-img--large">
-                                <img class="monster-img__img" src="{{ svg }}" width="200px" height="200px"  />
+                                <img class="monster-img__img" src="{{ svg }}" alt="{{ displayName }}" width="200px" height="200px"  />
                             </div>
                         </div>
                     </div>
