--- a/src/layouts/layout.html
+++ b/src/layouts/layout.html
@@ -35,7 +35,7 @@
 <body>
     {{> menu }}
     <div class="cz-logo">
-        <a href="/"><img class="cz-logo__image" src="/images/logo-light.svg" /></a>
+        <a href="/"><img class="cz-logo__image" src="/images/logo-light.svg" alt="CODEZILLA" /></a>
     </div>
 
     <div id="body-container" class="cz-body-container">
