--- a/src/partials/team-member.html
+++ b/src/partials/team-member.html
@@ -1,7 +1,7 @@
 <div cz-diamond="" class="cz-diamond {{#if clickable}}cz-diamond--clickable{{/if}}" cz-team-member="{{ name }}">
     <div class="cz-diamond__shape" cz-diamond-shape=""></div>
     <div class="monster-img monster-img--has-shadow">
-        <img class="monster-img__img" src="{{ svg }}" width="200px" height="200px" style="{{svgStyle}}" />
+        <img class="monster-img__img" src="{{ svg }}" alt="{{ displayName }}" width="200px" height="200px" style="{{svgStyle}}" />
     </div>
     <div class="cz-diamond__title">{{ displayName }}</div>
 </div>
