Added privacy statement

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -26,7 +26,8 @@
                         <p class="cz-text-inverse">
                             Hoogoorddreef 9<br />
                             1101 BA AMSTERDAM (Nabij de Arena)<br />
-                            KVK nr. 62653229
+                            KVK nr. 62653229<br />
+                            <a href="/privacyverklaring-CODEZILLA-25-mei-2018.pdf" target="_blank">privacy verklaring</a>
                         </p>
                     </address>
                     <p class="cz-text-inverse">
