feat: Added Vattenfall logo and updated team members

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -24,8 +24,8 @@
                     <div class="cz-divider"></div>
                     <address>
                         <p class="cz-text-inverse">
-                            Arena Boulevard 65-71<br />
-                            1101 DL AMSTERDAM<br />
+                            Tractieweg 41 (Studio N)<br />
+                            3534 AP Utrecht<br />
                             KVK nr. 62653229<br />
                             <a href="/privacyverklaring-CODEZILLA-25-mei-2018.pdf" target="_blank">privacy verklaring</a>
                         </p>
