--- a/src/scss/components/section.scss
+++ b/src/scss/components/section.scss
@@ -4,6 +4,6 @@
     background: $cz-fill-light;
 }
 
-.cz-section-inverse {
-    background: $cz-fill-grey-dark;
+.cz-section--inverse {
+    background: $cz-color-primary;
 }
