--- a/src/scss/components/tortured-border.scss
+++ b/src/scss/components/tortured-border.scss
@@ -24,3 +24,9 @@
     margin-top: -2px;
     background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="1282" height="33"><path fill="%23FFF" fill-rule="evenodd" d="M0 28h391.738l86.633 1.643L538.74 24l106.3 4 131.282 5 221.098-5H1282V0H0"></path></svg>');
 }
+
+
+.tortured-border--bottom-green {
+    margin-top: -2px;
+    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="1282" height="33"><path fill="%2368d517" fill-rule="evenodd" d="M0 28h391.738l86.633 1.643L538.74 24l106.3 4 131.282 5 221.098-5H1282V0H0"></path></svg>');
+}
