feature(footer): remove phone number and update email address

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -10,10 +10,9 @@
                     <div class="cz-divider"></div>
                     <p class="cz-text-inverse">Klinkt wat we doen en hoe we werken aantrekkelijk en interessant? Voor een kop koffie of lunch maken we altijd tijd.</p>
 
-                    <h3 class="cz-heading-3 heading-inverse">Bel of mail ons</h3>
+                    <h3 class="cz-heading-3 heading-inverse">Mail ons</h3>
                     <p class="cz-text-inverse">
-                        <a href="tel:+31 (0) 20 3120 458">020 - 3120 458</a> of 
-                        <a href="mailto:martin@codezilla.nl">martin@codezilla.nl</a>
+                        <a href="mailto:martin@codezilla.nl">info@codezilla.nl</a>
                     </p>
                 </div>
             </section>
@@ -31,9 +30,7 @@
                         </p>
                     </address>
                     <p class="cz-text-inverse">
-                        Tel: <a href="tel:+31 (0) 20 3120 458">020 - 3120 458</a>
-                        <br />
-                        Email: <a href="mailto:martin@codezilla.nl">martin@codezilla.nl</a>
+                        Email: <a href="mailto:martin@codezilla.nl">info@codezilla.nl</a>
                     </p>
                 </div>
             </section>
