fix(footer): fix mailto

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -12,7 +12,7 @@
 
                     <h3 class="cz-heading-3 heading-inverse">Mail ons</h3>
                     <p class="cz-text-inverse">
-                        <a href="mailto:martin@codezilla.nl">info@codezilla.nl</a>
+                        <a href="mailto:info@codezilla.nl">info@codezilla.nl</a>
                     </p>
                 </div>
             </section>
@@ -30,7 +30,7 @@
                         </p>
                     </address>
                     <p class="cz-text-inverse">
-                        Email: <a href="mailto:martin@codezilla.nl">info@codezilla.nl</a>
+                        Email: <a href="mailto:info@codezilla.nl">info@codezilla.nl</a>
                     </p>
                 </div>
             </section>
