--- a/src/scss/components/diamond-grid.scss
+++ b/src/scss/components/diamond-grid.scss
@@ -43,6 +43,9 @@ $diamong-grid-width-md: 80vw;
         &:nth-child(5n+4):nth-last-child(1){
             margin-right: calc( 33% + 1vw);
         }
+        &:nth-child(5n+2):nth-last-child(1){
+            margin-right: 33%;
+        }
         &:nth-child(5n+5) {
             left: -1/2vw;
         }
