--- a/src/scss/settings/variables.scss
+++ b/src/scss/settings/variables.scss
@@ -35,6 +35,7 @@ $cz-inner-spacing: 16px;
 $cz-breakpoint-tablet: 520px;
 $cz-breakpoint-desktop: 770px;
 $cz-max-width-desktop: 1300px;
+$cz-breakpoint-desktop-xl: 2200px;
 
 $cz-breakpoints-map: (
     "tablet" : $cz-breakpoint-tablet,
