--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -5,7 +5,7 @@
         <div class="container">
             <div class="cz-footer__blocks-inner">
             <section class="cz-footer__block">
-                <div class="cz-footer__block-container">
+                <div class="cz-footer__block-container cz-footer__block-container--left">
                     <h2 class="cz-heading-2 heading-inverse cz-no-m-b">Koffie of lunch?</h2>
                     <div class="cz-divider"></div>
                     <p class="cz-text-inverse">Klinkt wat we doen en hoe we werken aantrekkelijk en interessant? Voor een kop koffie of lunch maken we altijd tijd.</p>
@@ -18,7 +18,7 @@
             </section>
 
             <section class="cz-footer__block">
-                <div class="cz-footer__block-container">
+                <div class="cz-footer__block-container cz-footer__block-container--right">
                     <h2 class="cz-heading-2 heading-inverse cz-no-m-b">CODEZILLA B.V.</h2>
                     <div class="cz-divider"></div>
                     <address>
