feature(copy): improve copy text

--- a/src/partials/carousel.html
+++ b/src/partials/carousel.html
@@ -4,15 +4,14 @@
         <li class="cz-carousel--item">
             <div class="cz-carousel__image cz-image-focus-right" style="background-image:url('/images/header-image-home-1.jpg')"></div>
             <div class="cz-carousel__content">
-                <h1 class="cz-carousel__title">Front end coding</h1>
+                <h1 class="cz-carousel__title">Wij zijn CODEZILLA</h1>
                 <p class="cz-carousel__slogan">
-                    interactieve <br />
-                    gebruiksvriendelijke <br />
-                    webapplicaties
+                    Monsterlijk Goed <br />
+                    in Front End Development
                 </p>
             </div>
         </li>
-        <li class="cz-carousel--item">
+        <!-- <li class="cz-carousel--item">
             <div class="cz-carousel__image cz-image-focus-right" style="background-image:url('/images/header-image-home-2.jpg')"></div>
             <div class="cz-carousel__content">
                 <h1 class="cz-carousel__title">A bad website is like a flat tire</h1>
@@ -20,13 +19,13 @@
                     You can't go anywhere <br/> until you change it
                 </p>
             </div>
-        </li>
+        </li> -->
         <li class="cz-carousel--item">
             <div class="cz-carousel__image cz-image-focus-right" style="background-image:url('/images/header-image-home-3.jpg')"></div>
             <div class="cz-carousel__content">
-                <h1 class="cz-carousel__title">We make the web great again</h1>
+                <h1 class="cz-carousel__title">Quality is king</h1>
                 <p class="cz-carousel__slogan">
-                    Websites should look good <br/>  from the inside and out
+                    Websites en web apps moeten er goed uitzien<br/> van binnen, en van buiten
                 </p>
             </div>
         </li>
