chore(a11y): improve a11y from lighthouse report

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -12,7 +12,7 @@
 
                     <h3 class="cz-heading-3 heading-inverse">Mail ons</h3>
                     <p class="cz-text-inverse">
-                        <a href="mailto:info@codezilla.nl">info@codezilla.nl</a>
+                        <a href="mailto:info@codezilla.nl" class="cz-text-link-inverse">info@codezilla.nl</a>
                     </p>
                 </div>
             </section>
@@ -26,11 +26,11 @@
                             Tractieweg 41 (Studio N)<br />
                             3534 AP Utrecht<br />
                             KVK nr. 62653229<br />
-                            <a href="/privacyverklaring-CODEZILLA-25-mei-2018.pdf" target="_blank">privacy verklaring</a>
+                            <a href="/privacyverklaring-CODEZILLA-25-mei-2018.pdf" target="_blank" class="cz-text-link-inverse">privacy verklaring</a>
                         </p>
                     </address>
                     <p class="cz-text-inverse">
-                        Email: <a href="mailto:info@codezilla.nl">info@codezilla.nl</a>
+                        Email: <a href="mailto:info@codezilla.nl" class="cz-text-link-inverse">info@codezilla.nl</a>
                     </p>
                 </div>
             </section>
