--- a/src/partials/menu.html
+++ b/src/partials/menu.html
@@ -1,5 +1,5 @@
 <nav cz-menu class="cz-menu">
-    <button cz-menu-button class="cz-menu__button cz-menu-button">
+    <button cz-menu-button class="cz-menu__button cz-menu-button" aria-label="Menu">
         <div class="cz-menu-button__lines">
             <div class="cz-menu-button__line"></div>
             <div class="cz-menu-button__line"></div>
