--- a/src/scss/components/text.scss
+++ b/src/scss/components/text.scss
@@ -12,6 +12,6 @@
 
 .cz-text-link-inverse {
     @include cz-font-family('Regular', 'Radikal');
-    color: $cz-text-inverse;
+    color: #009CA6;
 }
 
