--- a/src/layouts/layout.html
+++ b/src/layouts/layout.html
@@ -21,6 +21,10 @@
     <link rel="canonical" href="{{ canonical }}" />
     <!-- Links -->
     <link rel="stylesheet" href="/main.css">
+    <!-- Preload -->
+    <link rel="preload" href="/font/roboto/roboto-bold.woff2" as="font" crossorigin="anonymous">
+    <link rel="preload" href="/font/radikal/324CAE_3_0.woff2" as="font" crossorigin="anonymous">
+    <link rel="preload" href="/font/radikal/324CAE_9_0.woff2" as="font" crossorigin="anonymous">
     <!-- Favicons -->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=BGBPjAyxEE">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=BGBPjAyxEE">
